--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         </button>
       </div>
     </main>
-    <script src="color.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
